--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 name = "dilbert.py"
 version = "1.0.0"
 description = "Fetch comics from Dilbert."
-authors = ["Mr.Brawler <omkaar.nerurkar@gmail.com>"]
+authors = ["Infiniticity <omkaar.nerurkar@gmail.com>"]
 license = "MIT"
 readme = "README.rst"
-repository = "https://github.com/Pysics/dilbert.py/"
+repository = "https://github.com/Infiniticity/dilbert.py/"
 documentation = "https://dilbert.readthedocs.io/"
 keywords = ["python", "dilbert"]
 classifiers = [
@@ -20,4 +20,4 @@ beautifulsoup4 = "4.11.*"
 requests = "2.27.*"
 
 [tool.poetry.urls]
-"Bug Tracker" = "https://github.com/Pysics/dilbert.py/issues"
+"Bug Tracker" = "https://github.com/Infiniticity/dilbert.py/issues"
